<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Story App</string>
    <string name="txt_registration">Sign up</string>
    <string name="txt_error_edt_password">Min 6 characters</string>
    <string name="txt_error_edt_email">invalid email</string>
    <string name="txt_email" translatable="false" tools:keep="@string/txt_email">Email</string>
    <string name="txt_sign_in" tools:keep="@string/txt_sign_in">Sign in</string>
    <string name="txt_new_account" tools:keep="@string/txt_new_account">Create new account?</string>
    <string name="txt_name" tools:keep="@string/txt_name">Name</string>
    <string name="txt_password" translatable="false" tools:keep="@string/txt_password">Password</string>
    <string name="txt_story">Story</string>
    <string name="txt_empty_column">Column is empty</string>
    <string name="wrong_email_or_password">Cannot login, please check your email or password</string>
    <string name="txt_create_account" tools:keep="@string/txt_create_account">Create Account</string>
    <string name="txt_camera" tools:keep="@string/txt_camera">Camera</string>
    <string name="txt_gallery" translatable="false" tools:keep="@string/txt_gallery">Gallery</string>
    <string name="txt_upload" tools:keep="@string/txt_upload">Upload</string>
    <string name="txt_description" tools:keep="@string/txt_description">Write your story here.</string>
    <string name="dec_img_photo">story photo</string>
    <string name="txt_use_location">Use current location</string>
</resources>