<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity"
    tools:keep="@layout/activity_register">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edt_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatEditText
            android:lines="1"
            android:inputType="text"
            android:hint="@string/txt_name"
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="54dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edt_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="8dp"
        android:layout_below="@id/layout_edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.ra.storyapp.customview.CsEditTextEmail
            android:id="@+id/edt_email"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="54dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edt_password"
        android:layout_below="@id/layout_edt_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.ra.storyapp.customview.CsEditTextPassword
            android:hint="@string/txt_password"
            android:id="@+id/edt_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="54dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_edt_password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:text="@string/txt_create_account" />


</RelativeLayout>