<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    tools:keep="@layout/activity_login">

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:alpha="0"
        android:src="@drawable/ic_baseline_person_24"
        app:civ_border_width="1dp"
        android:layout_marginTop="16dp"
        android:id="@+id/img_photo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:alpha="0"
        android:layout_marginTop="16dp"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_photo"
        app:layout_constraintStart_toStartOf="@+id/img_photo"
        app:layout_constraintTop_toBottomOf="@+id/img_photo" />

    <com.google.android.material.textfield.TextInputLayout
        android:alpha="0"
        android:id="@+id/layout_edt_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:startIconDrawable="@drawable/ic_email_24">

        <com.ra.storyapp.customview.CsEditTextEmail

            android:id="@+id/edt_email"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/txt_email" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:alpha="0"
            android:id="@+id/layout_edt_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/layout_edt_email"
            app:layout_constraintStart_toStartOf="@+id/layout_edt_email"
            app:layout_constraintTop_toBottomOf="@+id/layout_edt_email"
            app:startIconDrawable="@drawable/ic_lock_24">

            <com.ra.storyapp.customview.CsEditTextPassword
                android:hint="@string/txt_password"
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:alpha="0"
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_sign_in"
            app:layout_constraintEnd_toEndOf="@+id/layout_edt_password"
            app:layout_constraintStart_toStartOf="@+id/layout_edt_password"
            app:layout_constraintTop_toBottomOf="@+id/layout_edt_password" />

        <TextView
            android:alpha="0"
            android:textSize="@dimen/txt_size_16"
            android:id="@+id/tv_create_new_account"
            android:textColor="@color/purple_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_new_account"
            app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    </androidx.constraintlayout.widget.ConstraintLayout>